--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BOT_TOKEN=NTczMTk5NDQzMjkwMjI2NzE5.Gp6lB7.g9m9WqrhLH-qimNDU6FDOboQ1EUmkJADDMbI1Y
-CLIENT_ID=573199443290226719
-GUILD_ID=514497644316590080
-mongooseConnectionString=mongodb+srv://Thinkbot:Zacharycolby@thinkbot.otdyv.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+BOT_TOKEN=(Your Bot Token Here)
+CLIENT_ID=(Your CLient Id Here)
+GUILD_ID=(Your Guild Id Here (optional))
+mongooseConnectionString=(MongooseDB Connection String Here)
